# kurbo-cpp

./: .cursorrules  CMakeLists.txt
cmake/: kurboConfig.cmake.in
examples/: affine_example.cpp  basic.cpp  bezpath_example.cpp  circle_example.cpp  common.cpp  cubicbez_example.cpp  ellipse_debug.cpp  ellipse_example.cpp  line_example.cpp  param_curve_example.cpp  path_el_example.cpp  point_vec.cpp  quadbez_example.cpp  rect_example.cpp  rounded_rect_example.cpp  shape_example.cpp  size.cpp  translate_scale_example.cpp  triangle_example.cpp
include/kurbo/: affine.hpp  arc.hpp  bezpath.hpp  circle.hpp  common.hpp  cubicbez.hpp  ellipse.hpp  inline_methods.hpp  kurbo.hpp  line.hpp  param_curve.hpp  path_el.hpp  point.hpp  quadbez.hpp  quadspline.hpp  rect.hpp  rounded_rect.hpp  rounded_rect_radii.hpp  shape.hpp  size.hpp  translate_scale.hpp  triangle.hpp  vec2.hpp
src/kurbo/: affine.cpp  arc.cpp  bezpath.cpp  circle.cpp  common.cpp  cubicbez.cpp  ellipse.cpp  line.cpp  param_curve.cpp  path_el.cpp  point.cpp  quadbez.cpp  quadspline.cpp  rect.cpp  rounded_rect.cpp  rounded_rect_radii.cpp  shape.cpp  size.cpp  translate_scale.cpp  triangle.cpp  vec2.cpp
tests/: test_affine.cpp  test_arc.cpp  test_bezpath.cpp  test_circle.cpp  test_common.cpp  test_cubicbez.cpp  test_ellipse.cpp  test_line.cpp  test_param_curve.cpp  test_path_el.cpp  test_point.cpp  test_quadbez.cpp  test_rect.cpp  test_rounded_rect.cpp  test_rounded_rect_radii.cpp  test_shape.cpp  test_size.cpp  test_translate_scale.cpp  test_triangle.cpp  test_vec2.cpp
